# web-novel-pacing-analyzer

./: .gitignore  CLAUDE.md  LICENSE  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  pyproject.toml
skills/: SHARED-SCORING-SCHEMA.md  main.md  sub-evaluation-framework-selector.md  sub-improvement-roadmap.md  sub-scoring-engine.md  sub-trope-trend-updater.md
tests/: conftest.py  test-scenarios.md  test_scenarios.py
tests/fixtures/: build_fixtures.py  empty_request.json  expected_manifest.json  refusal_request.json  scenario_1_request.json  scenario_2_request.json  scenario_3_request.json  scenario_4_request.json  scenario_5_request.json  scenario_6_request.json
tools/: knowledge_updater.py
tools/pacing_analyzer/: __init__.py  __main__.py  arc_cadence.py  chapter_pacing.py  cli.py  framework_selector.py  gates.py  genre_data.py  harness.py  hook_density.py  improvement_roadmap.py  schemas.py  scoring_engine.py  structure_scorer.py  tension_curve.py  text_stats.py  trope_matcher.py  trope_trend_updater.py
tools/pacing_analyzer/data/: scoring_schema.json
